use swagger generated struct
