# src/handler/openapigenmodel/go/model_multiple_error_response.go
@@ -1,0 +1,39 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Customer API
+ *
+ * API for customer management
+ *
+ * API version: 1.0.0
+ */
+
+package openapi
+
+
+
+
+type MultipleErrorResponse struct {
+
+	Errors []ErrorElement `json:"errors,omitempty"`
+}
+
+// AssertMultipleErrorResponseRequired checks if the required fields are not zero-ed
+func AssertMultipleErrorResponseRequired(obj MultipleErrorResponse) error {
+	for _, el := range obj.Errors {
+		if err := AssertErrorElementRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertMultipleErrorResponseConstraints checks if the values respects the defined constraints
+func AssertMultipleErrorResponseConstraints(obj MultipleErrorResponse) error {
+	for _, el := range obj.Errors {
+		if err := AssertErrorElementConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
